--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "blog-api",
   "version": "1.0.0",
-  "description": "",
+  "description": "/user - to get all users - GET /user/signup - to sign up -  POST - {email,first_name, last_name, password} /user/login - to login - POST - {email, password} /user/:id - to get user by id - GET /blog = to get all blog posts - GET /blog - to create a blog Post - POST - {title, description, body , tags[]} /blog/:id to update a blog post - PUT /blog/:id - to get  a blog post by id - GET /blog/:id - to delete a blog post - DEL /myblog - to get blog posts by logged in user - GET /blog/:id to publish blog post - PATCH",
   "main": "app.js",
   "type": "module",
   "scripts": {
@@ -11,17 +11,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.3.2",
-    "nodemon": "^3.1.0"
-  },
-  "devDependencies": {
-    "jest": "^29.7.0",
-    "supertest": "^6.3.4"
+    "mongoose": "^8.3.2"
   }
 }
